force-app/main/default/objects/SA_Restricted_Word__c/SA_Restricted_Word__c.object-meta.xml
<CustomObject>
    <label>SA Restricted Word</label>
    <nameField>
        <displayFormat>RW-{0000}</displayFormat>
        <label>SA Restricted Word Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SA Restricted Words</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>