force-app/main/default/objects/SA_Restricted_Word__c/fields/Override_Substitution__c.field-meta.xml
<CustomField>
    <fullName>Override_Substitution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Substitution</label>
    <type>Checkbox</type>
</CustomField>