force-app/main/default/objects/SA_Restricted_Word__c/fields/RegexValue__c.field-meta.xml
<CustomField>
    <fullName>RegexValue__c</fullName>
    <label>RegexValue</label>
    <type>TextArea</type>
</CustomField>