force-app/main/default/objects/SA_Restricted_Word__c/fields/ReplacementRegexValue__c.field-meta.xml
<CustomField>
    <fullName>ReplacementRegexValue__c</fullName>
    <label>ReplacementRegexValue</label>
    <type>TextArea</type>
</CustomField>