force-app/main/default/objects/SA_Restricted_Word__c/fields/SampleEntry__c.field-meta.xml
<CustomField>
    <fullName>SampleEntry__c</fullName>
    <label>SampleEntry</label>
    <type>TextArea</type>
</CustomField>