force-app/main/default/objects/SA_Restricted_Word__c/fields/Substitution__c.field-meta.xml
<CustomField>
    <fullName>Substitution__c</fullName>
    <label>Substitution</label>
    <type>TextArea</type>
</CustomField>