force-app/main/default/objects/SA_Restricted_Word__c/fields/Word__c.field-meta.xml
<CustomField>
    <fullName>Word__c</fullName>
    <label>Word</label>
    <type>TextArea</type>
</CustomField>