force-app/main/default/objects/SA_Restricted_Word__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Word__c</columns>
    <columns>SampleEntry__c</columns>
    <columns>RegexValue__c</columns>
    <columns>Substitution__c</columns>
    <columns>Designation_Type__c</columns>
    <columns>isActive__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>